# pokeplatinum-portable

./: .gitignore  CLEANUP_PLAN.md  CMakeLists.txt  PAL.md  PHASE1_TASK1_SUMMARY.md  PHASE2_TASK2_SUMMARY.md  PHASE2_TASK3_SUMMARY.md  PHASE2_TASK4_SUMMARY.md  PHASE2_TASK5_SUMMARY.md  PHASE3_SUMMARY.md  PHASE3_TASK4.2_SUMMARY.md  PHASE3_TASK4_PLAN.md  PHASES_1-3_COMPLETE.md  PORTING_PLAN.md  QUICKSTART_SDL.md  README.md  RESOURCES.md  TESTING_INPUT.md  build_sdl.sh  fix_typedefs.sh  meson.options  test_asset_paths.sh  test_graphics_loading.c  test_graphics_loading.py
.github/: copilot-instructions.md
docs/: DS_GRAPHICS_REFERENCE.md  DS_HEAP_REFERENCE.md
include/: ascii_util.h  bag.h  bag_context.h  berry_data.h  berry_patch_graphics.h  berry_patch_manager.h  berry_patches.h  bg_window.h  brightness_controller.h  buffer_manager.h  camera.h  catching_show.h  cell_transfer.h  char_transfer.h  character_sprite.h  charcode.h  charcode_util.h  coins.h  colored_arrow.h  comm_player_manager.h  comm_ring.h  communication_information.h  communication_system.h  daycare_save.h  dexmode_checker.h  dynamic_map_features.h  easy3d.h  easy3d_object.h  enc_effects.h  encounter.h  enums.h  evolution.h  field_battle_data_transfer.h  field_comm_manager.h  field_map_change.h  field_message.h  field_move_tasks.h  field_overworld_state.h  field_script_context.h  field_system.h  (+257 more)
include/applications/: diploma.h  move_reminder.h  options_menu.h
include/battle/: ai_context.h  battle_anim_battler_context.h  battle_context.h  battle_controller.h  battle_display.h  battle_io.h  battle_lib.h  battle_message.h  battle_mon.h  battle_script.h  healthbar.h  move_display_info.h  ov16_0223B140.h  ov16_0223DF00.h  ov16_02268520.h  ov16_0226871C.h  ov16_0226DB7C.h  ov16_0226DE44.h  party_gauge.h  pokemon_sprite_data.h  struct_ov16_0223C2C0.h  struct_ov16_0224DDA8.h  struct_ov16_0225BFFC_t.h  struct_ov16_0225C168.h  struct_ov16_0225C17C.h  struct_ov16_0225C260.h  struct_ov16_0225C29C.h  struct_ov16_0225C29C_sub1.h  struct_ov16_0225C2B0.h  struct_ov16_0225C2C4.h  struct_ov16_0225C2D8.h  struct_ov16_0225C2EC.h  struct_ov16_0225C35C.h  struct_ov16_0225C370.h  struct_ov16_0225C384.h  struct_ov16_0225C398.h  struct_ov16_0225C3BC.h  struct_ov16_0225C3D0.h  struct_ov16_0225C3E4.h  struct_ov16_0225C3F8.h  (+59 more)
include/battle_anim/: battle_anim_helpers.h  battle_anim_system.h  battle_anim_util.h  battle_particle_util.h  const_ov12_0223B0A0.h  const_ov12_0223B0B8.h  const_ov12_0223B0DC.h  is_form_symmetrical.h  ov12_0222421C.h  ov12_02235E94.h  ov12_02237E54.h  ov12_02237EFC.h  ov12_022380BC.h  script_func_tables.h  struct_ov12_02223764.h  struct_ov12_02225640.h  struct_ov12_02236690.h  struct_ov12_022380DC.h
include/choose_starter/: choose_starter_app.h
include/constants/: colors.h  graphics.h  pokemon.h
include/constdata/: const_020EA02C.h  const_020EAB80.h  const_020ED570.h
include/cutscenes/: boat_cutscene.h  hall_of_fame.h
include/data/: berry_init.h  mart_items.h  pickup.h  trainer_class_genders.h  trainer_class_prize_mul.h
include/dw_warp/: dw_warp.h
include/field/: field_system.h  field_system_sub2_t.h
include/functypes/: funcptr_020312B8.h  funcptr_02031E6C.h  funcptr_02031E9C.h  funcptr_020320FC.h  funcptr_0203290C.h  funcptr_0205AB10.h  funcptr_020EC560.h
include/game_opening/: ov77_021D54B0.h  ov77_021D6C70.h
include/global/: pm_version.h
include/library_tv/: library_tv.h
include/main_menu/: distribution_cartridge.h  gba_convert_string.h  gba_pokemon.h  gba_save.h  main_menu_util.h  mystery_gift_app.h  ov97_0222D04C.h  ov97_02232DC8.h  ov97_02233408.h  ov97_02233814.h  ov97_02235D18.h  ov97_0223635C.h  ov97_02238534.h  struct_ov97_0223222C.h  struct_ov97_02232254.h  struct_ov97_02232254_sub1.h  struct_ov97_02232620.h  struct_ov97_02232620_sub1.h  struct_ov97_02232AC8.h  struct_ov97_02232E38.h  struct_ov97_02233268_sub1_sub1.h  struct_ov97_02233268_sub1_sub2.h  struct_ov97_02233268_sub2_sub1.h  struct_ov97_022335A8.h  struct_ov97_022335C8.h  struct_ov97_02233674_sub1.h  struct_ov97_02233674_sub2.h  struct_ov97_02233674_sub3.h  struct_ov97_02233674_sub4.h  struct_ov97_022339EC.h  struct_ov97_022339EC_sub1_sub1.h  struct_ov97_022339EC_sub1_sub2.h  struct_ov97_0223635C.h
include/nitro/: wm.h
include/overlay004/: funcptr_ov4_021D1104.h  funcptr_ov4_021D1120.h  funcptr_ov4_021D113C.h  funcptr_ov4_021D1150.h  ov4_021D0D80.h  ov4_021D2808.h
include/overlay005/: area_data.h  area_light.h  bdhc.h  berry_graphics_data.h  const_ov5_021FF6B8.h  const_ov5_021FF744.h  const_ov5_021FF7D0.h  daycare.h  dynamic_terrain_height.h  encounter_effect.h  field_camera.h  field_control.h  field_menu.h  fieldmap.h  fishing.h  footprint_type.h  hblank_system.h  honey_tree.h  land_data.h  loaded_map_buffers.h  map_name_popup.h  map_object_anim_cmd.h  map_prop.h  map_prop_animation.h  map_prop_material_shape.h  model_attributes.h  motion_blur.h  ov5_021D2F14.h  ov5_021D431C.h  ov5_021D57BC.h  ov5_021D5BC0.h  ov5_021D5CB0.h  ov5_021D5EB8.h  ov5_021DF440.h  ov5_021DFB54.h  (+37 more)
src/: ascii_util.c  bag.c  berry_patch_graphics.c  berry_patch_manager.c  bg_window.c  boot.c  brightness_controller.c  camera.c  catching_show.c  cell_transfer.c  char_transfer.c  character_sprite.c  charcode_util.c  coins.c  colored_arrow.c  comm_player_manager.c  comm_ring.c  communication_information.c  communication_system.c  daycare_save.c  dexmode_checker.c  dynamic_map_features.c  easy3d.c  easy3d_object.c  enc_effects.c  encounter.c  error_handling.c  error_message_reset.c  evolution.c  field_battle_data_transfer.c  field_comm_manager.c  field_map_change.c  field_message.c  field_move_tasks.c  field_overworld_state.c  field_overworld_weather.c  field_script_context.c  field_system.c  field_task.c  field_transition.c  (+286 more)
tools/: README.md  auto_fix_ds_calls.py  convert_assets.sh  convert_title_screen.py  fix_enum_corruption.py  fix_header_includes.py  fix_last_headers.sh  fix_nitro_includes.sh  fix_nnsys_headers.sh  fix_remaining_nitro_includes.sh  narc_extractor.py  ncgr_converter.py  nclr_converter.py  progress_report.py  update_to_nns_types.sh
(+1451 files in other folders)
